# benchmark

./: .gitignore  .gitmodules  Dockerfile  LEADERBOARD.md  README.md  _config.yml  app.py  aud.sh  benchmark.py  extract.py  img.sh  index.html  inference.py  leaderboard_1.csv  leaderboard_2.csv  leaderboard_3.csv  models.txt  pyproject.toml  pyrightconfig.json  requirements-benchmark.txt  requirements.txt  run-img.sh  run-vid.sh  running_command.sh  setup.py
.github/workflows/: fmt_lint.yaml  push_docker.yaml  push_spaces.yaml
benchmark/common/: download_weights.sh
benchmark/diffusion/image-to-video/scripts/: aggregate_leaderboard_data.py  aggregate_leaderboard_models.py  benchmark_one_datapoint.py  benchmark_one_model.py
benchmark/diffusion/image-to-video/sharegpt4video/: README.md  extract_first_frame.py  sample.py
benchmark/diffusion/text-to-image/scripts/: aggregate_leaderboard_data.py  benchmark_one_datapoint.py  benchmark_one_model.py
benchmark/diffusion/text-to-video/: Dockerfile
benchmark/diffusion/text-to-video/scripts/: aggregate_leaderboard_models.py  benchmark_one_datapoint.py  benchmark_one_model.py
benchmark/llm/: benchmark.py  dataset.py  dataset_readme.md  datasets.py  requirements.in  workloads.py
benchmark/llm_text_generation/chat/scripts/: aggregate_leaderboard_models.py  benchmark_client.py  benchmark_one_datapoint.py  benchmark_one_model.py
benchmark/llm_text_generation/code/: README.md
configs/vllm/audio-chat/: benchmark.yaml
configs/vllm/gpqa/: benchmark.yaml
configs/vllm/image-chat/: benchmark.yaml
configs/vllm/lm-arena-chat/: benchmark.yaml
configs/vllm/sourcegraph-fim/: benchmark.yaml
configs/vllm/video-chat/: benchmark.yaml
configs/xdit/text-to-image/: benchmark.yaml
configs/xdit/text-to-video/: benchmark.yaml
data/: A100_chat_benchmark.csv  A100_instruct_benchmark.csv  README.md  V100_chat_benchmark.csv  V100_instruct_benchmark.csv  models.json  score.csv  test.csv
data/2023-06-17/: A100_chat-concise_benchmark.csv  A100_instruct-concise_benchmark.csv  V100_chat-concise_benchmark.csv  schema.yaml
data/2023-07-05/: V100_instruct-concise_benchmark.csv  score.csv
data/chat/lmsys--vicuna-7B/: benchmark.json  config.json
data/diffusion/image-to-video/: models.json
data/diffusion/text-to-image/: models.json
data/diffusion/text-to-video/: models.json
data/llm_text_generation/chat/: models.json  schema.yaml
data/llm_text_generation/code/: models.json
data/mllm_text_generation/chat/: models.json
deployment/: benchmark.Dockerfile  docker-compose-0.yaml  docker-compose-1.yaml  fastchat_xgen_fix.patch
docker/: build-docker.sh  vllm-audio.Dockerfile  vllm-audio.def  vllm.Dockerfile
docs/: about.md  analyzing-results.md  citation.bib  colosseum_bottom.md  colosseum_top.md  data-preparation.md  leaderboard.md  overview.md  running-benchmarks.md
mlenergy/benchmark/: constants.py
mlenergy/benchmark/diffusion/: __init__.py  benchmark.py  workloads.py
mlenergy/benchmark/llm/: benchmark.py  datasets.py  prometheus.py  workloads.py
mlenergy/diffusion/: README.md  __init__.py  benchmark.py  dataset.py  workloads.py
mlenergy/diffusion/examples/: flux_example.py  run_flux.sh
mlenergy/dllm/: README.md  benchmark.py  dllm_runtime.py  install_fast_dllm.py  workloads.py
mlenergy/llm/: README.md  benchmark.py  config.py  datasets.py  prometheus.py  run.py  workloads.py
mlenergy/utils/: container_runtime.py
pegasus/: README.md  benchmark.yaml  benchmark_diffusion.yaml  nlp-eval.yaml  spawn-containers.yaml
scripts/: aggregate_nlp_metrics.py  benchmark.py  compute_metrics.py  compute_system_metrics.py  disagg_proxy_p2p_nccl_xpyd.py  generate_jobs.py  generate_jobs_diffusion.py  lint.sh  migrate_results_to_repeats.py  prepare_fsd50k.py  prepare_llava_videos.py  print_results.py  read_score.py  validate_results.py
sharegpt/: README.md  sg_90k_part1_html_cleaned_lang_first_sampled.json  sharegpt_feeder.py
spit-fight-website/: leaderboard.py  requirements.txt
spitfight/: prompt.py  utils.py
spitfight/colosseum/: client.py
spitfight/colosseum/controller/: controller.py
tests/: test_utils.py
tests/colosseum/: controller_load_test.py  test_client.py
tests/llm/: test_dataset_distribution.py  workloads.py
(+724 files in other folders)
