[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "mlenergy"

[project]
name = "mlenergy"
version = "3.0.0"
description = "The ML.ENERGY Benchmark"
readme = "README.md"
authors = [
    {name = "The ML.ENERGY Initiative"},
]
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.14",
    "datasets>=4.0.0",
    "mistral-common[sentencepiece]>=1.8.2",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "transformers>=4.53.2",
    "tyro>=0.9.26",
    "zeus>=0.12.3",
    "quart>=0.20.0",
    "msgpack>=1.1.1",
    "pyzmq>=27.0.0",
    "pyyaml>=6.0.2",
    "protobuf>=6.33.0",
]

[tool.setuptools.packages.find]
where = ["mlenergy"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.4",
]

[tool.pytest.ini_options]
addopts = "--numprocesses auto"
